# FfmpegVideoPlayer

./: .gitignore  CMakeLists.txt  LICENSE  README.md
examples/: SDLPlayerExample.cpp  SDLWindow.cpp  SDLWindow.h
include/FfmpegVideoPlayer/: VideoRead.h
src/: VideoRead.cpp
